Revamp user list UI and add search functionality
Updated the user list and pagination components for improved styling and usability, including Material Symbols icons and Tailwind classes. Added a search input to the users page, updated the user service and interface to support search queries, and ensured pagination and search work together. Cleaned up unused code and improved consistency across components.

--- a/src/app/components/app-layout/elements/sidebar/sidebar.component.html
+++ b/src/app/components/app-layout/elements/sidebar/sidebar.component.html
@@ -10,7 +10,7 @@
       <a routerLink="{{route.path}}" routerLinkActive="bg-zorba"
         class="flex items-center px-2 py-2.5 text-base font-medium transition-all duration-200 text-bisque rounded-lg hover:bg-zorba group">
         <div class="flex items-center justify-center">
-          <span class="material-icons-outlined">{{iconsDictionary[route.data['name']]}}</span>
+          <span class="material-symbols-rounded">{{iconsDictionary[route.data['name']]}}</span>
           <span class="pl-2">{{route.data['name']}}</span>
         </div>
       </a>
@@ -29,7 +29,7 @@
     <button type="button" (click)="logout()"
       class="flex items-center justify-between w-full px-4 py-3 text-base font-medium text-bisque transition-all duration-200 rounded-lg hover:bg-zorba">
       <div class="flex items-center justify-center">
-        <mat-icon class="material-icons-outlined">logout</mat-icon>
+        <span class="material-symbols-rounded">logout</span>
         <span class="pl-2">Salir</span>
       </div>
     </button>
