--- a/src/app/components/user/user-list/user-list.component.html
+++ b/src/app/components/user/user-list/user-list.component.html
@@ -1,41 +1,42 @@
-<div>
-  <table class="table-auto border-collapse border border-crater-brown w-full">
+<div class="overflow-hidden rounded-md border border-crater-brown">
+  <table class="w-full border-collapse p-3">
     <thead>
-      <tr class="text-center border border-crater-brown bg-crater-brown rounded-sm">
-        <th scope="col">ID</th>
-        <th scope="col">Name</th>
-        <th scope="col">Lastname</th>
-        <th scope="col">Email</th>
-        <th scope="col">Created</th>
-        <th scope="col">Updated</th>
-        <th class="text-center" scope="col">Actions</th>
+      <tr class="text-center border border-crater-brown bg-crater-brown text-bisque">
+        <th class="p-3" scope="col">ID</th>
+        <th class="p-3" scope="col">Name</th>
+        <th class="p-3" scope="col">Lastname</th>
+        <th class="p-3" scope="col">Email</th>
+        <th class="p-3" scope="col">Created</th>
+        <th class="p-3" scope="col">Updated</th>
+        <th class="p-3" scope="col">Actions</th>
       </tr>
     </thead>
     <tbody>
       @for (item of users; track item.id) {
-      <tr class="text-center border border-crater-brown">
-        <th scope="row">{{item.id}}</th>
-        <td>{{item.name}}</td>
-        <td>{{item.lastname}}</td>
-        <td>{{item.email}}</td>
-        <td>{{item.createdAt | date: 'dd/MM/yyyy HH:mm'}}</td>
-        <td>{{item.updatedAt | date: 'dd/MM/yyyy HH:mm'}}</td>
+      <tr class="text-center text-crater-brown font-semibold border-t border-crater-brown">
+        <td class="p-3" scope="row">{{item.id}}</td>
+        <td class="p-3" scope="row">{{item.name}}</td>
+        <td class="p-3" scope="row">{{item.lastname}}</td>
+        <td class="p-3" scope="row">{{item.email}}</td>
+        <td class="p-3" scope="row">{{item.createdAt | date: 'dd/MM/yyyy HH:mm'}}</td>
+        <td class="p-3" scope="row">{{item.updatedAt | date: 'dd/MM/yyyy HH:mm'}}</td>
         <td>
-          <button (click)="callModalAction.emit(item);" class="btn btn-warning me-2" type="button">
-            <mat-icon class="material-symbols-outlined text-crater-brown">
+          <button (click)="callModalAction.emit(item);" class="bg-flamenco px-2 p-0.5 rounded-md" type="button">
+            <span class="material-symbols-rounded text-lg text-bisque">
               edit
-            </mat-icon></button>
+            </span></button>
           <button (click)="callDeleteAction.emit(item)" [disabled]="(item.id == idUser)" class="btn btn-danger"
-            type="button"> <mat-icon class="material-symbols-outlined text-crater-brown">
+            type="button"> <span class="material-symbols-rounded text-crater-brown">
               delete
-            </mat-icon></button>
+            </span>
+          </button>
         </td>
       </tr>
       } @empty {
       <tr>
         <td colspan="7">
-          <div class="d-flex justify-content-center align-items-center w-100">
-            <p class="mb-0">There are not users</p>
+          <div class="flex justify-center items-center w-full">
+            <p class="p-3 text-crater-brown font-bold">There are not users</p>
           </div>
         </td>
       </tr>
