--- a/src/app/components/app-layout/app-layout.component.html
+++ b/src/app/components/app-layout/app-layout.component.html
@@ -10,7 +10,7 @@
 
   <div class="flex flex-col flex-1">
     <app-topbar></app-topbar>
-    <main>
+    <main class="overflow-y-scroll">
       <div class="py-6">
         <div class="px-4 mx-auto max-w-7xl sm:px-6 md:px-8">
           <router-outlet></router-outlet>
