Refactor modal and user form UI
Updated modal component and service to streamline modal usage and improve styling, including support for icons and custom backgrounds. Refactored user form for better UI consistency and removed unused password/updatedAt fields. Enhanced sidebar logout with confirmation modal. Improved overall UI with Tailwind classes and removed obsolete SCSS.

--- a/src/app/components/app-layout/elements/sidebar/sidebar.component.html
+++ b/src/app/components/app-layout/elements/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
       @for (route of permittedRoutes; track $index) {
       @if (route.data && route.data['showInSidebar']) {
       <a routerLink="{{route.path}}" routerLinkActive="bg-zorba"
-        class="flex items-center px-2 py-2.5 text-base font-medium transition-all duration-200 text-bisque rounded-lg hover:bg-zorba group">
+        class="flex items-center px-2 py-2.5 text-base font-medium transition-all duration-200 text-bisque rounded-md hover:bg-zorba group">
         <div class="flex items-center justify-center">
           <span class="material-symbols-rounded">{{iconsDictionary[route.data['name']]}}</span>
           <span class="pl-2">{{route.data['name']}}</span>
@@ -26,8 +26,8 @@
   </div>
 
   <div class="pb-5">
-    <button type="button" (click)="logout()"
-      class="flex items-center justify-between w-full px-4 py-3 text-base font-medium text-bisque transition-all duration-200 rounded-lg hover:bg-zorba">
+    <button type="button" (click)="callConfirmation()"
+      class="flex items-center justify-between w-full px-4 py-3 text-base font-medium text-bisque transition-all duration-200 rounded-md hover:bg-zorba">
       <div class="flex items-center justify-center">
         <span class="material-symbols-rounded">logout</span>
         <span class="pl-2">Salir</span>
@@ -35,3 +35,13 @@
     </button>
   </div>
 </div>
+
+<ng-template #addUsersModal>
+  <app-modal (callConfirmationMethod)="logout()" (callCancelMethod)="hideModal()" [cancelAction]="'Cancelar'"
+    [confirmAction]="'Confirmar'" [title]="'¿Estás seguro de que deseas continuar?'" [textCenter]="true"
+    [icon]="'error'">
+    <p class="text-bisque text-base">Esta acción cerrará tu acceso al sistema y deberás volver a iniciar sesión para
+      continuar.
+    </p>
+  </app-modal>
+</ng-template>
