--- a/src/app/components/pagination/pagination.component.html
+++ b/src/app/components/pagination/pagination.component.html
@@ -15,7 +15,7 @@
       </p>
     </div>
     <div>
-      <nav class="isolate inline-flex -space-x-px rounded-md shadow-sm" aria-label="Pagination">
+      <nav class="isolate inline-flex -space-x-px rounded-md" aria-label="Pagination">
         <button (click)="onPage(1)" [disabled]="service.search.pageNumber === 1"
           class="text-bisque rounded-l-md px-2 py-2 border-r-2 border-zorba  bg-crater-brown disabled:text-zorba ">
           <span class="material-symbols-rounded text-lg">
