--- a/src/app/components/app-layout/app-layout.component.html
+++ b/src/app/components/app-layout/app-layout.component.html
@@ -10,9 +10,9 @@
 
   <div class="flex flex-col flex-1">
     <app-topbar></app-topbar>
-    <main class="overflow-y-scroll">
-      <div class="py-6">
-        <div class="px-4 mx-auto max-w-7xl sm:px-6 md:px-8">
+    <main class="overflow-y-scroll h-screen">
+      <div class="py-6 h-full">
+        <div class="px-4 mx-auto max-w-7xl sm:px-6 md:px-8 h-full flex justify-center items-center">
           <router-outlet></router-outlet>
         </div>
       </div>
