--- a/src/app/components/app-layout/app-layout.component.html
+++ b/src/app/components/app-layout/app-layout.component.html
@@ -1,6 +1,5 @@
 <div class="flex flex-1 bg-gray-50 h-screen">
-
-  <div class="hidden md:flex md:w-64 md:flex-col">
+  <div class="w-72 md:flex md:w-56 md:flex-col">
     <div class="flex flex-col flex-grow bg-white">
       <div class="flex-1 flex flex-col">
         <app-sidebar></app-sidebar>
@@ -8,13 +7,12 @@
     </div>
   </div>
 
-  <div class="flex flex-col flex-1">
+  <div class="flex flex-col flex-1 h-screen overflow-hidden">
     <app-topbar></app-topbar>
-    <main class="overflow-y-scroll h-screen">
-      <div class="py-6 h-full">
-        <div class="px-4 mx-auto max-w-7xl sm:px-6 md:px-8 h-full flex justify-center items-center">
-          <router-outlet></router-outlet>
-        </div>
+
+    <main class="flex-1 overflow-y-auto h-full">
+      <div class="py-6 px-4 min-h-full flex justify-center items-center">
+        <router-outlet></router-outlet>
       </div>
     </main>
   </div>
