--- a/src/app/components/app-layout/elements/sidebar/sidebar.component.html
+++ b/src/app/components/app-layout/elements/sidebar/sidebar.component.html
@@ -1,7 +1,8 @@
 <div class="flex flex-col px-3 justify-between h-screen bg-crater-brown pt-5">
   <div>
     <div class="flex justify-center w-full">
-      <img class="w-40" src=" ../../../../../assets/img/sidebar/TribuTico.png" alt="" />
+      <img class="w-40" src=" ../../../../../assets/img/sidebar/TribuTico.png"
+        alt="Logo de la aplición web TribuTico" />
     </div>
 
     <nav class="flex-1 space-y-2 mt-4">
@@ -40,7 +41,8 @@
   <app-modal (callConfirmationMethod)="logout()" (callCancelMethod)="hideModal()" [cancelAction]="'Cancelar'"
     [confirmAction]="'Confirmar'" [title]="'¿Estás seguro de que deseas continuar?'" [textCenter]="true"
     [icon]="'error'">
-    <p class="text-bisque text-base">Esta acción cerrará tu acceso al sistema y deberás volver a iniciar sesión para
+    <p class="text-bisque text-base max-w-lg">Esta acción cerrará tu acceso al sistema y deberás volver a iniciar sesión
+      para
       continuar.
     </p>
   </app-modal>
