--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -4,8 +4,7 @@
 
   <div class="fixed inset-0 z-10 w-screen overflow-y-auto">
     <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
-      <div class="relative transform overflow-hidden rounded-lg text-left shadow-xl transition-all sm:my-8
-        sm:w-full sm:max-w-lg">
+      <div class="relative transform overflow-hidden rounded-md text-left shadow-xl transition-all">
         <div class="p-8"
           [ngClass]="{'bg-crater-brown': !useCustomBackGround, '{{customBackGround}}': useCustomBackGround}">
           <div class="modal-header fixed right-0 top-0 px-2 py-1" [hidden]="hideCancelOption">
