--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,14 +27,14 @@
 }
 
 /* Color del texto principal */
-.success-snackbar .mdc-snackbar__label {
+.error-snackbar .mdc-snackbar__label {
   color: #FFF1C1 !important;
   font-family: 'Montserrat', sans-serif !important;
   font-weight: bold !important;
 }
 
 /* Color del botón "Cerrar" */
-.success-snackbar .mdc-button__label {
+.error-snackbar .mdc-button__label {
   color: #FACF7D !important;
   font-family: 'Montserrat', sans-serif !important;
   font-weight: bold !important;
